Fix spacing and formatting

--- a/src/components/NavBar/style.css
+++ b/src/components/NavBar/style.css
@@ -3,7 +3,7 @@
   z-index: 1;
   width: 100%;
   vertical-align: middle;
-  transition: 500ms ease;
+  transition: 850ms ease;
 }
 
 .fa-play {
