--- a/src/components/Slider/style.css
+++ b/src/components/Slider/style.css
@@ -27,6 +27,6 @@
 }
 
 .section-title {
-  margin: 30px 0 15px 55px;
+  margin: 50px 0 10px 55px;
   color: rgb(214, 213, 213);
 }
